grammar.output
Terminals which are not used

   ID
   STRING
   EQ
   SEMICOLON
   KEYWORD
   DIGIT
   DECIMAL
   LETTER
   ALPHANUM
   OPERATORS
   OR
   AND


State 251 conflicts: 1 shift/reduce
State 318 conflicts: 1 shift/reduce


Grammar

    0 $accept: code $end

    1 code: mycode

    2 mycode: mycode in
    3       | mycode output
    4       | mycode function
    5       | mycode whileloop
    6       | mycode if
    7       | mycode tryrule
    8       | mycode for
    9       | mycode assignment
   10       | mycode listrule
   11       | mycode NEWLINE
   12       | mycode PASS
   13       | mycode import
   14       | mycode from
   15       | mycode class
   16       | class
   17       | in
   18       | output
   19       | function
   20       | whileloop
   21       | if
   22       | tryrule
   23       | for
   24       | assignment
   25       | listrule
   26       | PASS
   27       | import
   28       | from
   29       | NEWLINE

   30 stm: output NEWLINE
   31    | in NEWLINE
   32    | whileloop
   33    | for
   34    | tryrule

   35 statements: simple_stmt_return NEWLINE
   36           | statements simple_stmt_return NEWLINE
   37           | stm
   38           | statements stm
   39           | if
   40           | statements if
   41           | PASS
   42           | statements PASS
   43           | listrule NEWLINE
   44           | statements listrule NEWLINE
   45           | NEWLINE

   46 ifstatementsforloops: ifstatementsforloops simple_stmt_break NEWLINE
   47                     | condition
   48                     | ifstatementsforloops condition
   49                     | NEWLINE
   50                     | ifstatementsforloops NEWLINE
   51                     | simple_stmt_break NEWLINE
   52                     | ifstatementsforloops stm
   53                     | stm
   54                     | PASS
   55                     | ifstatementsforloops PASS
   56                     | listrule NEWLINE
   57                     | ifstatementsforloops listrule NEWLINE

   58 ifstatements: ifstatements assignment NEWLINE
   59             | ifcondition
   60             | ifstatements ifcondition
   61             | NEWLINE
   62             | ifstatements NEWLINE
   63             | assignment NEWLINE
   64             | ifstatements stm
   65             | stm
   66             | PASS
   67             | ifstatements PASS
   68             | listrule NEWLINE
   69             | ifstatements listrule NEWLINE

   70 whilestatements: whilestatements simple_stmt_break NEWLINE
   71                | simple_stmt_break NEWLINE
   72                | NEWLINE
   73                | stm
   74                | whilestatements stm
   75                | whilestatements NEWLINE
   76                | whilestatements ifforloops
   77                | ifforloops
   78                | PASS
   79                | whilestatements PASS
   80                | listrule NEWLINE
   81                | whilestatements listrule NEWLINE

   82 forstatements: forstatements simple_stmt_break NEWLINE
   83              | NEWLINE
   84              | forstatements NEWLINE
   85              | simple_stmt_break NEWLINE
   86              | forstatements stm
   87              | stm
   88              | forstatements ifforloops
   89              | ifforloops

   90 trystatements: simple_stmt_return NEWLINE
   91              | trystatements simple_stmt_return NEWLINE
   92              | stm
   93              | trystatements stm
   94              | if
   95              | trystatements if
   96              | PASS
   97              | trystatements PASS
   98              | listrule NEWLINE
   99              | trystatements listrule NEWLINE
  100              | NEWLINE

  101 simple_stmt_return: assignment
  102                   | return_stmt

  103 simple_stmt_break: assignment
  104                  | BREAK
  105                  | CONTINUE

  106 return_stmt: RETURN inreturn

  107 inreturn: inreturn COMMA arg
  108         | arg

  109 assignment: IDENTIFIER ASSIGN expression
  110           | IDENTIFIER ASSIGN in
  111           | IDENTIFIER ASSIGN listrule

  112 expression: expression PLUS expression
  113           | expression MINUS expression
  114           | expression MUL expression
  115           | expression DIVIDE expression
  116           | '|' expression
  117           | LBRACKET expression RBRACKET
  118           | MINUS expression
  119           | NUMBER
  120           | STRING_LITERAL
  121           | IDENTIFIER
  122           | TRUE
  123           | FALSE

  124 function: DEF IDENTIFIER LBRACKET args RBRACKET COLON block

  125 args: /* empty */
  126     | args_

  127 args_: arg
  128      | args_ COMMA arg

  129 arg: IDENTIFIER
  130    | NUMBER
  131    | STRING_LITERAL

  132 block: NEWLINE INDENTAITON statements DENTAITON

  133 ifforloops: ifconditionforloops

  134 ifconditionforloops: IF LBRACKET condition RBRACKET COLON ifblockforloops elifstatementforloops
  135                    | IF LBRACKET condition RBRACKET COLON ifblockforloops elsestatementforloops
  136                    | IF LBRACKET condition RBRACKET COLON ifblockforloops
  137                    | IF condition COLON ifblockforloops elifstatementforloops
  138                    | IF condition COLON ifblockforloops elsestatementforloops
  139                    | IF condition COLON ifblockforloops

  140 elifstatementforloops: ELIF LBRACKET condition RBRACKET COLON ifblockforloops
  141                      | ELIF LBRACKET condition RBRACKET COLON ifblockforloops elsestatementforloops
  142                      | ELIF LBRACKET condition RBRACKET COLON ifblockforloops elifstatementforloops
  143                      | ELIF condition COLON ifblockforloops
  144                      | ELIF condition COLON ifblockforloops elsestatementforloops
  145                      | ELIF condition COLON ifblockforloops elifstatementforloops

  146 elsestatementforloops: ELSE COLON ifblockforloops

  147 ifblockforloops: NEWLINE INDENTAITON ifstatementsforloops DENTAITON

  148 if: ifcondition

  149 ifcondition: IF LBRACKET condition RBRACKET COLON ifblock elifstatement
  150            | IF LBRACKET condition RBRACKET COLON ifblock elsestatement
  151            | IF LBRACKET condition RBRACKET COLON ifblock
  152            | IF condition COLON ifblock elifstatement
  153            | IF condition COLON ifblock elsestatement
  154            | IF condition COLON ifblock

  155 elifstatement: ELIF LBRACKET condition RBRACKET COLON ifblock
  156              | ELIF LBRACKET condition RBRACKET COLON ifblock elsestatement
  157              | ELIF LBRACKET condition RBRACKET COLON ifblock elifstatement
  158              | ELIF condition COLON ifblock
  159              | ELIF condition COLON ifblock elsestatement
  160              | ELIF condition COLON ifblock elifstatement

  161 elsestatement: ELSE COLON ifblock

  162 ifblock: NEWLINE INDENTAITON ifstatements DENTAITON

  163 condition: IDENTIFIER EQUAL IDENTIFIER
  164          | IDENTIFIER EQUAL NUMBER
  165          | NUMBER EQUAL NUMBER
  166          | IDENTIFIER
  167          | NUMBER
  168          | IDENTIFIER LESSTHAN NUMBER
  169          | NUMBER LESSTHAN NUMBER
  170          | IDENTIFIER LESSTHAN ASSIGN NUMBER
  171          | NUMBER LESSTHAN ASSIGN NUMBER
  172          | IDENTIFIER GREATERTHAN NUMBER
  173          | NUMBER GREATERTHAN NUMBER
  174          | IDENTIFIER GREATERTHAN ASSIGN NUMBER
  175          | NUMBER GREATERTHAN ASSIGN NUMBER
  176          | IDENTIFIER LESSTHAN IDENTIFIER
  177          | IDENTIFIER GREATERTHAN IDENTIFIER
  178          | IDENTIFIER LESSTHAN ASSIGN IDENTIFIER
  179          | IDENTIFIER GREATERTHAN ASSIGN IDENTIFIER
  180          | STRING_LITERAL
  181          | STRING_LITERAL LESSTHAN STRING_LITERAL
  182          | STRING_LITERAL GREATERTHAN STRING_LITERAL
  183          | STRING_LITERAL LESSTHAN ASSIGN STRING_LITERAL
  184          | STRING_LITERAL GREATERTHAN ASSIGN STRING_LITERAL
  185          | STRING_LITERAL EQUAL STRING_LITERAL
  186          | TRUE EQUAL TRUE
  187          | FALSE EQUAL FALSE
  188          | TRUE EQUAL FALSE
  189          | FALSE EQUAL TRUE
  190          | TRUE
  191          | FALSE
  192          | IDENTIFIER LESSTHAN IDENTIFIER LESSTHAN IDENTIFIER
  193          | IDENTIFIER LESSTHAN EQUAL IDENTIFIER LESSTHAN EQUAL IDENTIFIER
  194          | IDENTIFIER LESSTHAN EQUAL IDENTIFIER LESSTHAN IDENTIFIER
  195          | IDENTIFIER LESSTHAN IDENTIFIER LESSTHAN EQUAL IDENTIFIER
  196          | NUMBER LESSTHAN NUMBER LESSTHAN NUMBER
  197          | NUMBER LESSTHAN EQUAL NUMBER LESSTHAN EQUAL NUMBER
  198          | NUMBER LESSTHAN EQUAL NUMBER LESSTHAN NUMBER
  199          | NUMBER LESSTHAN NUMBER LESSTHAN EQUAL NUMBER
  200          | NUMBER GREATERTHAN EQUAL NUMBER GREATERTHAN EQUAL NUMBER
  201          | NUMBER GREATERTHAN NUMBER GREATERTHAN NUMBER
  202          | NUMBER GREATERTHAN NUMBER GREATERTHAN EQUAL NUMBER
  203          | NUMBER GREATERTHAN EQUAL NUMBER GREATERTHAN NUMBER
  204          | IDENTIFIER GREATERTHAN IDENTIFIER GREATERTHAN IDENTIFIER
  205          | IDENTIFIER GREATERTHAN EQUAL IDENTIFIER GREATERTHAN EQUAL IDENTIFIER
  206          | IDENTIFIER GREATERTHAN EQUAL IDENTIFIER GREATERTHAN IDENTIFIER
  207          | IDENTIFIER GREATERTHAN IDENTIFIER GREATERTHAN EQUAL IDENTIFIER

  208 whileloop: WHILE LBRACKET condition RBRACKET COLON whileblock
  209          | WHILE condition COLON whileblock

  210 whileblock: NEWLINE INDENTAITON whilestatements DENTAITON

  211 for: for_header COLON forblock

  212 for_header: FOR IDENTIFIER IN list

  213 forblock: NEWLINE INDENTAITON forstatements DENTAITON

  214 list: IDENTIFIER
  215     | STRING_LITERAL
  216     | range
  217     | listrule

  218 range: RANGE LBRACKET forparams RBRACKET

  219 forparams: expression COMMA expression COMMA expression
  220          | expression COMMA expression
  221          | expression

  222 tryrule: try_except

  223 try: TRY COLON NEWLINE INDENTAITON trystatements DENTAITON
  224    | TRY COLON NEWLINE INDENTAITON trystatements try_except DENTAITON
  225    | TRY COLON NEWLINE INDENTAITON try_except DENTAITON

  226 except: EXCEPT COLON NEWLINE INDENTAITON trystatements DENTAITON

  227 finally: FINALLY COLON NEWLINE INDENTAITON trystatements DENTAITON

  228 tryelse: ELSE COLON NEWLINE INDENTAITON trystatements DENTAITON

  229 except_name: EXCEPT IDENTIFIER COLON NEWLINE INDENTAITON trystatements DENTAITON
  230            | EXCEPT IDENTIFIER AS IDENTIFIER COLON NEWLINE INDENTAITON trystatements DENTAITON

  231 try_except: try except
  232           | try except tryelse
  233           | try except_name
  234           | try except_name except
  235           | try except_name tryelse
  236           | try except finally
  237           | try except tryelse finally
  238           | try except_name finally
  239           | try except_name except finally
  240           | try except_name tryelse finally

  241 output: PRINT LBRACKET txtn RBRACKET

  242 in: INPUT LBRACKET txtn RBRACKET

  243 txtn: txtn PLUS txtn
  244     | txtnt

  245 txtnt: NUMBER
  246      | IDENTIFIER
  247      | txtw

  248 txtw: txtw STRING_LITERAL
  249     | STRING_LITERAL

  250 listrule: SQUAREBL inlist SQUAREBR

  251 inlist: inlist COMMA arg
  252       | inlist COMMA arg NEWLINE
  253       | inlist COMMA NEWLINE arg
  254       | arg
  255       | NEWLINE

  256 class: CLASS IDENTIFIER COLON classblock
  257      | CLASS IDENTIFIER LBRACKET classargs RBRACKET COLON classblock

  258 classargs: classargs COMMA IDENTIFIER
  259          | IDENTIFIER

  260 classblock: NEWLINE INDENTAITON mycode DENTAITON

  261 import: IMPORT IDENTIFIER
  262       | IMPORT IDENTIFIER path
  263       | IMPORT path AS IDENTIFIER

  264 from: FROM IDENTIFIER path IMPORT IDENTIFIER

  265 path: DOT IDENTIFIER
  266     | path DOT IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'|' (124) 116
error (256)
ID (258)
STRING (259)
ASSIGN (260) 109 110 111 170 171 174 175 178 179 183 184
RETURN (261) 106
EQ (262)
PLUS (263) 112 243
MINUS (264) 113 118
MUL (265) 114
DIVIDE (266) 115
SEMICOLON (267)
EQUAL (268) 163 164 165 185 186 187 188 189 193 194 195 197 198 199
    200 202 203 205 206 207
PRINT (269) 241
KEYWORD (270)
IDENTIFIER (271) 109 110 111 121 124 129 163 164 166 168 170 172 174
    176 177 178 179 192 193 194 195 204 205 206 207 212 214 229 230
    246 256 257 258 259 261 262 263 264 265 266
DEF (272) 124
INDENTAITON (273) 132 147 162 210 213 223 224 225 226 227 228 229 230
    260
DENTAITON (274) 132 147 162 210 213 223 224 225 226 227 228 229 230
    260
NEWLINE (275) 11 29 30 31 35 36 43 44 45 46 49 50 51 56 57 58 61 62
    63 68 69 70 71 72 75 80 81 82 83 84 85 90 91 98 99 100 132 147
    162 210 213 223 224 225 226 227 228 229 230 252 253 255 260
STRING_LITERAL (276) 120 131 180 181 182 183 184 185 215 248 249
DIGIT (277)
NUMBER (278) 119 130 164 165 167 168 169 170 171 172 173 174 175 196
    197 198 199 200 201 202 203 245
DECIMAL (279)
LETTER (280)
ALPHANUM (281)
OPERATORS (282)
COLON (283) 124 134 135 136 137 138 139 140 141 142 143 144 145 146
    149 150 151 152 153 154 155 156 157 158 159 160 161 208 209 211
    223 224 225 226 227 228 229 230 256 257
ELSE (284) 146 161 228
IF (285) 134 135 136 137 138 139 149 150 151 152 153 154
FOR (286) 212
WHILE (287) 208 209
INPUT (288) 242
EXCEPT (289) 226 229 230
TRY (290) 223 224 225
ELIF (291) 140 141 142 143 144 145 155 156 157 158 159 160
LBRACKET (292) 117 124 134 135 136 140 141 142 149 150 151 155 156
    157 208 218 241 242 257
RBRACKET (293) 117 124 134 135 136 140 141 142 149 150 151 155 156
    157 208 218 241 242 257
TRUE (294) 122 186 188 189 190
FALSE (295) 123 187 188 189 191
COMMA (296) 107 128 219 220 251 252 253 258
GREATERTHAN (297) 172 173 174 175 177 179 182 184 200 201 202 203 204
    205 206 207
LESSTHAN (298) 168 169 170 171 176 178 181 183 192 193 194 195 196
    197 198 199
AS (299) 230 263
FINALLY (300) 227
IN (301) 212
RANGE (302) 218
BREAK (303) 104
CONTINUE (304) 105
SQUAREBL (305) 250
SQUAREBR (306) 250
PASS (307) 12 26 41 42 54 55 66 67 78 79 96 97
IMPORT (308) 261 262 263 264
DOT (309) 265 266
CLASS (310) 256 257
FROM (311) 264
OR (312)
AND (313)
UMINUS (314)


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
code (62)
    on left: 1, on right: 0
mycode (63)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
    23 24 25 26 27 28 29, on right: 1 2 3 4 5 6 7 8 9 10 11 12 13 14
    15 260
stm (64)
    on left: 30 31 32 33 34, on right: 37 38 52 53 64 65 73 74 86 87
    92 93
statements (65)
    on left: 35 36 37 38 39 40 41 42 43 44 45, on right: 36 38 40 42
    44 132
ifstatementsforloops (66)
    on left: 46 47 48 49 50 51 52 53 54 55 56 57, on right: 46 48 50
    52 55 57 147
ifstatements (67)
    on left: 58 59 60 61 62 63 64 65 66 67 68 69, on right: 58 60 62
    64 67 69 162
whilestatements (68)
    on left: 70 71 72 73 74 75 76 77 78 79 80 81, on right: 70 74 75
    76 79 81 210
forstatements (69)
    on left: 82 83 84 85 86 87 88 89, on right: 82 84 86 88 213
trystatements (70)
    on left: 90 91 92 93 94 95 96 97 98 99 100, on right: 91 93 95
    97 99 223 224 226 227 228 229 230
simple_stmt_return (71)
    on left: 101 102, on right: 35 36 90 91
simple_stmt_break (72)
    on left: 103 104 105, on right: 46 51 70 71 82 85
return_stmt (73)
    on left: 106, on right: 102
inreturn (74)
    on left: 107 108, on right: 106 107
assignment (75)
    on left: 109 110 111, on right: 9 24 58 63 101 103
expression (76)
    on left: 112 113 114 115 116 117 118 119 120 121 122 123,
    on right: 109 112 113 114 115 116 117 118 219 220 221
function (77)
    on left: 124, on right: 4 19
args (78)
    on left: 125 126, on right: 124
args_ (79)
    on left: 127 128, on right: 126 128
arg (80)
    on left: 129 130 131, on right: 107 108 127 128 251 252 253 254
block (81)
    on left: 132, on right: 124
ifforloops (82)
    on left: 133, on right: 76 77 88 89
ifconditionforloops (83)
    on left: 134 135 136 137 138 139, on right: 133
elifstatementforloops (84)
    on left: 140 141 142 143 144 145, on right: 134 137 142 145
elsestatementforloops (85)
    on left: 146, on right: 135 138 141 144
ifblockforloops (86)
    on left: 147, on right: 134 135 136 137 138 139 140 141 142 143
    144 145 146
if (87)
    on left: 148, on right: 6 21 39 40 94 95
ifcondition (88)
    on left: 149 150 151 152 153 154, on right: 59 60 148
elifstatement (89)
    on left: 155 156 157 158 159 160, on right: 149 152 157 160
elsestatement (90)
    on left: 161, on right: 150 153 156 159
ifblock (91)
    on left: 162, on right: 149 150 151 152 153 154 155 156 157 158
    159 160 161
condition (92)
    on left: 163 164 165 166 167 168 169 170 171 172 173 174 175 176
    177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 192
    193 194 195 196 197 198 199 200 201 202 203 204 205 206 207,
    on right: 47 48 134 135 136 137 138 139 140 141 142 143 144 145
    149 150 151 152 153 154 155 156 157 158 159 160 208 209
whileloop (93)
    on left: 208 209, on right: 5 20 32
whileblock (94)
    on left: 210, on right: 208 209
for (95)
    on left: 211, on right: 8 23 33
for_header (96)
    on left: 212, on right: 211
forblock (97)
    on left: 213, on right: 211
list (98)
    on left: 214 215 216 217, on right: 212
range (99)
    on left: 218, on right: 216
forparams (100)
    on left: 219 220 221, on right: 218
tryrule (101)
    on left: 222, on right: 7 22 34
try (102)
    on left: 223 224 225, on right: 231 232 233 234 235 236 237 238
    239 240
except (103)
    on left: 226, on right: 231 232 234 236 237 239
finally (104)
    on left: 227, on right: 236 237 238 239 240
tryelse (105)
    on left: 228, on right: 232 235 237 240
except_name (106)
    on left: 229 230, on right: 233 234 235 238 239 240
try_except (107)
    on left: 231 232 233 234 235 236 237 238 239 240,
    on right: 222 224 225
output (108)
    on left: 241, on right: 3 18 30
in (109)
    on left: 242, on right: 2 17 31 110
txtn (110)
    on left: 243 244, on right: 241 242 243
txtnt (111)
    on left: 245 246 247, on right: 244
txtw (112)
    on left: 248 249, on right: 247 248
listrule (113)
    on left: 250, on right: 10 25 43 44 56 57 68 69 80 81 98 99 111
    217
inlist (114)
    on left: 251 252 253 254 255, on right: 250 251 252 253
class (115)
    on left: 256 257, on right: 15 16
classargs (116)
    on left: 258 259, on right: 257 258
classblock (117)
    on left: 260, on right: 256 257
import (118)
    on left: 261 262 263, on right: 13 27
from (119)
    on left: 264, on right: 14 28
path (120)
    on left: 265 266, on right: 262 263 264 266


state 0

    0 $accept: . code $end

    PRINT       shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    DEF         shift, and go to state 3
    NEWLINE     shift, and go to state 4
    IF          shift, and go to state 5
    FOR         shift, and go to state 6
    WHILE       shift, and go to state 7
    INPUT       shift, and go to state 8
    TRY         shift, and go to state 9
    SQUAREBL    shift, and go to state 10
    PASS        shift, and go to state 11
    IMPORT      shift, and go to state 12
    CLASS       shift, and go to state 13
    FROM        shift, and go to state 14

    code         go to state 15
    mycode       go to state 16
    assignment   go to state 17
    function     go to state 18
    if           go to state 19
    ifcondition  go to state 20
    whileloop    go to state 21
    for          go to state 22
    for_header   go to state 23
    tryrule      go to state 24
    try          go to state 25
    try_except   go to state 26
    output       go to state 27
    in           go to state 28
    listrule     go to state 29
    class        go to state 30
    import       go to state 31
    from         go to state 32


state 1

  241 output: PRINT . LBRACKET txtn RBRACKET

    LBRACKET  shift, and go to state 33


state 2

  109 assignment: IDENTIFIER . ASSIGN expression
  110           | IDENTIFIER . ASSIGN in
  111           | IDENTIFIER . ASSIGN listrule

    ASSIGN  shift, and go to state 34


state 3

  124 function: DEF . IDENTIFIER LBRACKET args RBRACKET COLON block

    IDENTIFIER  shift, and go to state 35


state 4

   29 mycode: NEWLINE .

    $default  reduce using rule 29 (mycode)


state 5

  149 ifcondition: IF . LBRACKET condition RBRACKET COLON ifblock elifstatement
  150            | IF . LBRACKET condition RBRACKET COLON ifblock elsestatement
  151            | IF . LBRACKET condition RBRACKET COLON ifblock
  152            | IF . condition COLON ifblock elifstatement
  153            | IF . condition COLON ifblock elsestatement
  154            | IF . condition COLON ifblock

    IDENTIFIER      shift, and go to state 36
    STRING_LITERAL  shift, and go to state 37
    NUMBER          shift, and go to state 38
    LBRACKET        shift, and go to state 39
    TRUE            shift, and go to state 40
    FALSE           shift, and go to state 41

    condition  go to state 42


state 6

  212 for_header: FOR . IDENTIFIER IN list

    IDENTIFIER  shift, and go to state 43


state 7

  208 whileloop: WHILE . LBRACKET condition RBRACKET COLON whileblock
  209          | WHILE . condition COLON whileblock

    IDENTIFIER      shift, and go to state 36
    STRING_LITERAL  shift, and go to state 37
    NUMBER          shift, and go to state 38
    LBRACKET        shift, and go to state 44
    TRUE            shift, and go to state 40
    FALSE           shift, and go to state 41

    condition  go to state 45


state 8

  242 in: INPUT . LBRACKET txtn RBRACKET

    LBRACKET  shift, and go to state 46


state 9

  223 try: TRY . COLON NEWLINE INDENTAITON trystatements DENTAITON
  224    | TRY . COLON NEWLINE INDENTAITON trystatements try_except DENTAITON
  225    | TRY . COLON NEWLINE INDENTAITON try_except DENTAITON

    COLON  shift, and go to state 47


state 10

  250 listrule: SQUAREBL . inlist SQUAREBR

    IDENTIFIER      shift, and go to state 48
    NEWLINE         shift, and go to state 49
    STRING_LITERAL  shift, and go to state 50
    NUMBER          shift, and go to state 51

    arg     go to state 52
    inlist  go to state 53


state 11

   26 mycode: PASS .

    $default  reduce using rule 26 (mycode)


state 12

  261 import: IMPORT . IDENTIFIER
  262       | IMPORT . IDENTIFIER path
  263       | IMPORT . path AS IDENTIFIER

    IDENTIFIER  shift, and go to state 54
    DOT         shift, and go to state 55

    path  go to state 56


state 13

  256 class: CLASS . IDENTIFIER COLON classblock
  257      | CLASS . IDENTIFIER LBRACKET classargs RBRACKET COLON classblock

    IDENTIFIER  shift, and go to state 57


state 14

  264 from: FROM . IDENTIFIER path IMPORT IDENTIFIER

    IDENTIFIER  shift, and go to state 58


state 15

    0 $accept: code . $end

    $end  shift, and go to state 59


state 16

    1 code: mycode .
    2 mycode: mycode . in
    3       | mycode . output
    4       | mycode . function
    5       | mycode . whileloop
    6       | mycode . if
    7       | mycode . tryrule
    8       | mycode . for
    9       | mycode . assignment
   10       | mycode . listrule
   11       | mycode . NEWLINE
   12       | mycode . PASS
   13       | mycode . import
   14       | mycode . from
   15       | mycode . class

    PRINT       shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    DEF         shift, and go to state 3
    NEWLINE     shift, and go to state 60
    IF          shift, and go to state 5
    FOR         shift, and go to state 6
    WHILE       shift, and go to state 7
    INPUT       shift, and go to state 8
    TRY         shift, and go to state 9
    SQUAREBL    shift, and go to state 10
    PASS        shift, and go to state 61
    IMPORT      shift, and go to state 12
    CLASS       shift, and go to state 13
    FROM        shift, and go to state 14

    $default  reduce using rule 1 (code)

    assignment   go to state 62
    function     go to state 63
    if           go to state 64
    ifcondition  go to state 20
    whileloop    go to state 65
    for          go to state 66
    for_header   go to state 23
    tryrule      go to state 67
    try          go to state 25
    try_except   go to state 26
    output       go to state 68
    in           go to state 69
    listrule     go to state 70
    class        go to state 71
    import       go to state 72
    from         go to state 73


state 17

   24 mycode: assignment .

    $default  reduce using rule 24 (mycode)


state 18

   19 mycode: function .

    $default  reduce using rule 19 (mycode)


state 19

   21 mycode: if .

    $default  reduce using rule 21 (mycode)


state 20

  148 if: ifcondition .

    $default  reduce using rule 148 (if)


state 21

   20 mycode: whileloop .

    $default  reduce using rule 20 (mycode)


state 22

   23 mycode: for .

    $default  reduce using rule 23 (mycode)


state 23

  211 for: for_header . COLON forblock

    COLON  shift, and go to state 74


state 24

   22 mycode: tryrule .

    $default  reduce using rule 22 (mycode)


state 25

  231 try_except: try . except
  232           | try . except tryelse
  233           | try . except_name
  234           | try . except_name except
  235           | try . except_name tryelse
  236           | try . except finally
  237           | try . except tryelse finally
  238           | try . except_name finally
  239           | try . except_name except finally
  240           | try . except_name tryelse finally

    EXCEPT  shift, and go to state 75

    except       go to state 76
    except_name  go to state 77


state 26

  222 tryrule: try_except .

    $default  reduce using rule 222 (tryrule)


state 27

   18 mycode: output .

    $default  reduce using rule 18 (mycode)


state 28

   17 mycode: in .

    $default  reduce using rule 17 (mycode)


state 29

   25 mycode: listrule .

    $default  reduce using rule 25 (mycode)


state 30

   16 mycode: class .

    $default  reduce using rule 16 (mycode)


state 31

   27 mycode: import .

    $default  reduce using rule 27 (mycode)


state 32

   28 mycode: from .

    $default  reduce using rule 28 (mycode)


state 33

  241 output: PRINT LBRACKET . txtn RBRACKET

    IDENTIFIER      shift, and go to state 78
    STRING_LITERAL  shift, and go to state 79
    NUMBER          shift, and go to state 80

    txtn   go to state 81
    txtnt  go to state 82
    txtw   go to state 83


state 34

  109 assignment: IDENTIFIER ASSIGN . expression
  110           | IDENTIFIER ASSIGN . in
  111           | IDENTIFIER ASSIGN . listrule

    MINUS           shift, and go to state 84
    IDENTIFIER      shift, and go to state 85
    STRING_LITERAL  shift, and go to state 86
    NUMBER          shift, and go to state 87
    INPUT           shift, and go to state 8
    LBRACKET        shift, and go to state 88
    TRUE            shift, and go to state 89
    FALSE           shift, and go to state 90
    SQUAREBL        shift, and go to state 10
    '|'             shift, and go to state 91

    expression  go to state 92
    in          go to state 93
    listrule    go to state 94


state 35

  124 function: DEF IDENTIFIER . LBRACKET args RBRACKET COLON block

    LBRACKET  shift, and go to state 95


state 36

  163 condition: IDENTIFIER . EQUAL IDENTIFIER
  164          | IDENTIFIER . EQUAL NUMBER
  166          | IDENTIFIER .
  168          | IDENTIFIER . LESSTHAN NUMBER
  170          | IDENTIFIER . LESSTHAN ASSIGN NUMBER
  172          | IDENTIFIER . GREATERTHAN NUMBER
  174          | IDENTIFIER . GREATERTHAN ASSIGN NUMBER
  176          | IDENTIFIER . LESSTHAN IDENTIFIER
  177          | IDENTIFIER . GREATERTHAN IDENTIFIER
  178          | IDENTIFIER . LESSTHAN ASSIGN IDENTIFIER
  179          | IDENTIFIER . GREATERTHAN ASSIGN IDENTIFIER
  192          | IDENTIFIER . LESSTHAN IDENTIFIER LESSTHAN IDENTIFIER
  193          | IDENTIFIER . LESSTHAN EQUAL IDENTIFIER LESSTHAN EQUAL IDENTIFIER
  194          | IDENTIFIER . LESSTHAN EQUAL IDENTIFIER LESSTHAN IDENTIFIER
  195          | IDENTIFIER . LESSTHAN IDENTIFIER LESSTHAN EQUAL IDENTIFIER
  204          | IDENTIFIER . GREATERTHAN IDENTIFIER GREATERTHAN IDENTIFIER
  205          | IDENTIFIER . GREATERTHAN EQUAL IDENTIFIER GREATERTHAN EQUAL IDENTIFIER
  206          | IDENTIFIER . GREATERTHAN EQUAL IDENTIFIER GREATERTHAN IDENTIFIER
  207          | IDENTIFIER . GREATERTHAN IDENTIFIER GREATERTHAN EQUAL IDENTIFIER

    EQUAL        shift, and go to state 96
    GREATERTHAN  shift, and go to state 97
    LESSTHAN     shift, and go to state 98

    $default  reduce using rule 166 (condition)


state 37

  180 condition: STRING_LITERAL .
  181          | STRING_LITERAL . LESSTHAN STRING_LITERAL
  182          | STRING_LITERAL . GREATERTHAN STRING_LITERAL
  183          | STRING_LITERAL . LESSTHAN ASSIGN STRING_LITERAL
  184          | STRING_LITERAL . GREATERTHAN ASSIGN STRING_LITERAL
  185          | STRING_LITERAL . EQUAL STRING_LITERAL

    EQUAL        shift, and go to state 99
    GREATERTHAN  shift, and go to state 100
    LESSTHAN     shift, and go to state 101

    $default  reduce using rule 180 (condition)


state 38

  165 condition: NUMBER . EQUAL NUMBER
  167          | NUMBER .
  169          | NUMBER . LESSTHAN NUMBER
  171          | NUMBER . LESSTHAN ASSIGN NUMBER
  173          | NUMBER . GREATERTHAN NUMBER
  175          | NUMBER . GREATERTHAN ASSIGN NUMBER
  196          | NUMBER . LESSTHAN NUMBER LESSTHAN NUMBER
  197          | NUMBER . LESSTHAN EQUAL NUMBER LESSTHAN EQUAL NUMBER
  198          | NUMBER . LESSTHAN EQUAL NUMBER LESSTHAN NUMBER
  199          | NUMBER . LESSTHAN NUMBER LESSTHAN EQUAL NUMBER
  200          | NUMBER . GREATERTHAN EQUAL NUMBER GREATERTHAN EQUAL NUMBER
  201          | NUMBER . GREATERTHAN NUMBER GREATERTHAN NUMBER
  202          | NUMBER . GREATERTHAN NUMBER GREATERTHAN EQUAL NUMBER
  203          | NUMBER . GREATERTHAN EQUAL NUMBER GREATERTHAN NUMBER

    EQUAL        shift, and go to state 102
    GREATERTHAN  shift, and go to state 103
    LESSTHAN     shift, and go to state 104

    $default  reduce using rule 167 (condition)


state 39

  149 ifcondition: IF LBRACKET . condition RBRACKET COLON ifblock elifstatement
  150            | IF LBRACKET . condition RBRACKET COLON ifblock elsestatement
  151            | IF LBRACKET . condition RBRACKET COLON ifblock

    IDENTIFIER      shift, and go to state 36
    STRING_LITERAL  shift, and go to state 37
    NUMBER          shift, and go to state 38
    TRUE            shift, and go to state 40
    FALSE           shift, and go to state 41

    condition  go to state 105


state 40

  186 condition: TRUE . EQUAL TRUE
  188          | TRUE . EQUAL FALSE
  190          | TRUE .

    EQUAL  shift, and go to state 106

    $default  reduce using rule 190 (condition)


state 41

  187 condition: FALSE . EQUAL FALSE
  189          | FALSE . EQUAL TRUE
  191          | FALSE .

    EQUAL  shift, and go to state 107

    $default  reduce using rule 191 (condition)


state 42

  152 ifcondition: IF condition . COLON ifblock elifstatement
  153            | IF condition . COLON ifblock elsestatement
  154            | IF condition . COLON ifblock

    COLON  shift, and go to state 108


state 43

  212 for_header: FOR IDENTIFIER . IN list

    IN  shift, and go to state 109


state 44

  208 whileloop: WHILE LBRACKET . condition RBRACKET COLON whileblock

    IDENTIFIER      shift, and go to state 36
    STRING_LITERAL  shift, and go to state 37
    NUMBER          shift, and go to state 38
    TRUE            shift, and go to state 40
    FALSE           shift, and go to state 41

    condition  go to state 110


state 45

  209 whileloop: WHILE condition . COLON whileblock

    COLON  shift, and go to state 111


state 46

  242 in: INPUT LBRACKET . txtn RBRACKET

    IDENTIFIER      shift, and go to state 78
    STRING_LITERAL  shift, and go to state 79
    NUMBER          shift, and go to state 80

    txtn   go to state 112
    txtnt  go to state 82
    txtw   go to state 83


state 47

  223 try: TRY COLON . NEWLINE INDENTAITON trystatements DENTAITON
